test/fail/M0028.mo
module X {};
let _ : X.Y.t = ();
